[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vial-to-keymap"
version = "0.1.0"
description = "Export a Vial keyboard's layout to keymap-drawer YAML"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-2.0-or-later" }
keywords = ["vial", "qmk", "keyboard", "keymap-drawer", "keymap"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "hid",
    "pyaml",
]

[project.urls]
Homepage = "https://github.com/Nisker/vial-to-keymap"
Issues = "https://github.com/Nisker/vial-to-keymap/issues"

[project.scripts]
vial-to-keymap = "vial_to_keymap.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
